Remove STR from chapter 10 and 11